examples/bad/ERROR_NOT_A_REFERENCE/assignment_to_non_ref_parameter.st
language core;
extend with #references, #sequencing;

fn main(n : Nat) -> Nat {
	return n := 0; n
}


//ERROR_NOT_A_REFERENCE
